Fixed 'not showing ad' issue

--- a/assets/css/popup.css
+++ b/assets/css/popup.css
@@ -5,11 +5,12 @@ div.ads-banners-popup-container
 	bottom: 0; 
 	left: 0; 
 	right: 0; 
-	display: none;
 	background-color: rgba( 0, 0, 0, 0.5 );
-	z-index: 999999;
+	z-index: -100;
+	opacity: 0;
+	pointer-events: none;
 
-	visibility: visible !important;
+	visibility: hidden;
 }
 
 .ads-banners-popup
